# finhub

./: .gitignore  LICENSE  README.md
backend/: .env.sqlite  .env.supabase  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d884935f460f_initial_schema.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  settings.py  yf_service.py
backend/tests/: conftest.py  test_api.py
frontend/: package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  prices.ts  tickers.ts
frontend/src/components/: CreateTickerForm.tsx
frontend/src/pages/: TickerPage.tsx  TickersPage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: validation.ts
